--- a/src/components/currency-selector/currency-selector.html
+++ b/src/components/currency-selector/currency-selector.html
@@ -4,7 +4,7 @@
     </a>
     <ul class="dropdown-menu" role="menu" data-aria-labelledby="main-currency-selector">
         <li>
-            <a data-ng-click="cs.setCurrency('ADM')" data-ng-class="{active: currency.symbol == 'ADM'}" class="LSK">ADM</a>
+            <a data-ng-click="cs.setCurrency('G50')" data-ng-class="{active: currency.symbol == 'G50'}" class="LSK">G50</a>
         </li>
         <li data-ng-if="currency.tickers.LSK" data-ng-repeat="(key, value) in currency.tickers.LSK">
             <a data-ng-click="cs.setCurrency(key)" data-ng-class="{active: currency.symbol == {{key}}}" class="{{key}}">{{key}}</a>
