--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -2,13 +2,13 @@
     <div class="container">
         <div class="row">
         <div class="col-left col-sm-8">
-            <a href="https://adamant.im" target="_blank" title="Go to ADAMANT Website" class="link website-link">Adamant.im</a>
-            <a href="https://adamant.im/#adm-apps" target="_blank" title="ADAMANT Messenger applications" class="link forum-link">Messenger</a>
+            <a href="https://grand50.im" target="_blank" title="Go to grand50 Website" class="link website-link">grand50.im</a>
+            <a href="https://grand50.im/#g50-apps" target="_blank" title="grand50 Messenger applications" class="link forum-link">Messenger</a>
             
             <div class="dropup decimal-places-selector" data-uib-dropdown style="display:none">
                 <a href id="decimal-points-dropdown" class="dropdown-toggle decimal-places-menu"
                 data-uib-dropdown-toggle data-aria-haspopup="true"
-                data-ng-class="{disabled: ($root.currency.symbol !== 'BTC' && $root.currency.symbol !== 'ADM')}"
+                data-ng-class="{disabled: ($root.currency.symbol !== 'BTC' && $root.currency.symbol !== 'G50')}"
                 role="button" data-aria-expanded="false">Decimal places <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu" data-aria-labelledby="decimal-points-dropdown">
                     <li data-ng-class='{active: $root.decimalPlaces === undefined}'>
@@ -26,8 +26,8 @@
         <div class="col-right col-sm-4 hidden-xs">
             <a href="https://bitcointalk.org/index.php?topic=2626619" target="_blank" title="Bitcoin Talk Thread" class="link btt-link"><i class="fa fa-bitcoin fa-2x"></i></a>
             <a href="https://twitter.com/adamant_im" target="_blank" title="Twitter" class="link twitter-link" ><i class="fa fa-twitter fa-2x"></i></a>
-            <a href="https://github.com/Adamant-im" target="_blank" title="Github" class="link github-link"><i class="fa fa-github fa-2x"></i></a>
-            <a href="https://join.slack.com/t/adamant-im/shared_invite/enQtMjg1MzQ0Njc3NzY3LWQwYTdlN2VlOWI2NGMwOTdkYjUxMTgzNjI0YTQwZTI0NGM1YjY0MzMyNGY3NTM0OWRiYzMzOWRkODk3YjFjZGQ" target="_blank" title="Slack" class="link slack-link"><i class="fa fa-slack fa-2x"></i></a>
+            <a href="https://github.com/grand50-im" target="_blank" title="Github" class="link github-link"><i class="fa fa-github fa-2x"></i></a>
+            <a href="https://join.slack.com/t/grand50-im/shared_invite/enQtMjg1MzQ0Njc3NzY3LWQwYTdlN2VlOWI2NGMwOTdkYjUxMTgzNjI0YTQwZTI0NGM1YjY0MzMyNGY3NTM0OWRiYzMzOWRkODk3YjFjZGQ" target="_blank" title="Slack" class="link slack-link"><i class="fa fa-slack fa-2x"></i></a>
         </div>
         </div>
     </div>
