--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="/">
-                    <div class="logo" title="ADAMANT Block Explorer"></div>
+                    <div class="logo" title="Grand50 Block Explorer"></div>
                 </a>
                 <div class="mobile-search-container visible-xs"><search class="visible-xs" /></div>
             </div>
