--- a/src/components/reserved-wallets/reservedWallets.html
+++ b/src/components/reserved-wallets/reservedWallets.html
@@ -8,7 +8,7 @@
 
             <div class="latest-h1">
                 <div>
-                    <h1>Reserved ADAMANT Wallets</h1>
+                    <h1>Reserved Grand50 Wallets</h1>
                 </div>
             </div>
             <hr>
@@ -19,7 +19,7 @@
                             <th class="text-left hidden-xs">Id</th>
                             <th class="text-right">Name</th>
                             <th class="text-right">Address</th>
-                            <th class="text-right">Balance (ADM)</th>
+                            <th class="text-right">Balance (G50)</th>
                         </tr> 
                     </thead>
                     <tbody>
