--- a/src/components/top-accounts/top-accounts.html
+++ b/src/components/top-accounts/top-accounts.html
@@ -4,7 +4,7 @@
             <h1>Top Accounts</h1>
         </div>
         <div class="latest-note">Total Supply: {{vm.totalSupply |
-            currency:$root.currency:$root.decimalPlaces:2}} ADM</div>
+            currency:$root.currency:$root.decimalPlaces:2}} G50</div>
     </div>
     <hr />
     <div data-ng-if="vm.topAccounts.results.length">
